test/integration/bad/tuples/incomplete4.stan
data {
    tuple( real , tuple( complex , complex ) while
